[package]
name = "foxit-trust-root-tool"
version = "0.1.0"
authors = ["David Cook <divergentdave@gmail.com>"]
edition = "2018"

[dependencies]
async-std = "1.7.0"
base64 = "0.13.0"
pdf = { git = "https://github.com/pdf-rs/pdf", rev = "8beb8c2267842ee310099a56edfaa41195dc4f6f" }
pdf_derive = { git = "https://github.com/pdf-rs/pdf", rev = "8beb8c2267842ee310099a56edfaa41195dc4f6f" }
surf = "2.1.0"
